[project]
name = "data-reconciliation-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==4.2.2",
    "beautifulsoup4>=4.14.3",
    "logging>=0.4.9.6",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0,<3",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "streamlit>=1.40.0",
    "streamlit-option-menu>=0.4.0",
]
